# stationxml-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PROMPT.md  README.md
.github/workflows/: ci.yml
data/: sensors.json
docs/guide/: 01-overview.md  02-channel-codes.md  03-instrument-response.md  04-fdsn-vs-sc3ml.md
pyscripts/: pyproject.toml
pyscripts/src/pyscripts/: __main__.py  generate_vectors.py
src/: builder.rs  conversion.rs  datetime.rs  error.rs  format.rs  inventory.rs  lib.rs  sensor.rs
src/fdsn/: mod.rs  reader.rs  types.rs  writer.rs
src/sc3ml/: mod.rs  reader.rs  types.rs  writer.rs
tests/: fdsn_roundtrip.rs  sc3ml_roundtrip.rs
tests/fixtures/: fdsn_sample.xml  sc3ml_sample.xml
