[package]
name = "stationxml-rs"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Pure Rust FDSN StationXML and SeisComP SC3ML reader/writer with format-agnostic inventory model"
repository = "https://github.com/luhtfiimanal/stationxml-rs"
readme = "README.md"
keywords = ["seismic", "stationxml", "fdsn", "sc3ml", "seiscomp"]
categories = ["encoding", "parser-implementations", "science"]
exclude = ["pyscripts/", "CLAUDE.md", "PROMPT.md"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
